--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
     "authors": [
     ],
     "require": {
-        "php": ">=5.3.2",
-        "guzzlehttp/guzzle": "master"
+        "php": ">=5.3.2"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
